--- a/docker/dockerfile/Dockerfile.sdwebui_ext
+++ b/docker/dockerfile/Dockerfile.sdwebui_ext
@@ -87,7 +87,7 @@ RUN git clone --depth=1 https://github.com/hallatore/stable-diffusion-webui-chat
 RUN git clone --depth=1 https://github.com/continue-revolution/sd-webui-segment-anything
 # 安装 grounddino 依赖
 RUN git clone --depth=1 https://github.com/IDEA-Research/GroundingDINO.git
-ENV TORCH_CUDA_ARCH_LIST="6.0;6.1;7.0;7.5;8.0;8.6+PTX"
+ENV TORCH_CUDA_ARCH_LIST="6.0;6.1;7.0;7.5;8.0;8.6+PTX;8.9;9.0"
 RUN cd GroundingDINO/ && python -m pip install .
 
 # 进行一次安装，以便将插件的依赖安装到容器中
