--- a/docker/dockerfile/Dockerfile.sdwebui_ext
+++ b/docker/dockerfile/Dockerfile.sdwebui_ext
@@ -112,6 +112,9 @@ RUN git clone --depth=1 https://github.com/nonnonstop/sd-webui-3d-open-pose-edit
 # 安装 sd-webui-civitai-helper（C站助手）
 RUN git clone --depth=1 https://github.com/butaixianran/Stable-Diffusion-Webui-Civitai-Helper
 
+# 安装 sd-webui-agent-scheduler（Agent调度器）
+RUN git clone --depth=1 https://github.com/ArtVentureX/sd-webui-agent-scheduler
+
 # 进行一次安装，以便将插件的依赖安装到容器中
 WORKDIR $NOTEBOOK_DIR/stable-diffusion-webui
 ENV COMMANDLINE_ARGS --skip-torch-cuda-test
