--- a/docker/dockerfile/Dockerfile.comfyui_ext
+++ b/docker/dockerfile/Dockerfile.comfyui_ext
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y pkg-config libcairo2-dev
 RUN git clone https://github.com/Fannovel16/comfy_controlnet_preprocessors
 RUN cd comfy_controlnet_preprocessors && \
     conda activate py3.10.6 && \
+    python -m pip install ftfy && \
     python -m pip install -r requirements.txt
 
 # RUN cd comfy_controlnet_preprocessors && conda activate py3.10.6 && python install.py
