--- a/docker/dockerfile/Dockerfile.comfyui_ext
+++ b/docker/dockerfile/Dockerfile.comfyui_ext
@@ -55,3 +55,5 @@ RUN cd ComfyUI-Impact-Pack && \
 # RUN git clone --depth=1 https://github.com/ssitu/ComfyUI_NestedNodeBuilder;
 
 RUN git clone --depth=1 https://github.com/ltdrdata/ComfyUI-Workflow-Component;
+
+RUN git clone --depth=1 https://github.com/Derfuu/Derfuu_ComfyUI_ModdedNodes
