--- a/docker/src/configs/globalConfig.yaml
+++ b/docker/src/configs/globalConfig.yaml
@@ -221,7 +221,7 @@ dockerBuildConfig:
         TENSOBOARD_PORT_1: 6006
         TENSOBOARD_PORT_2: 6007
       launch:
-        test: false
+        test: true
         prod: false
       mountVolumes:
         - ${host_base}/.cache:/root/.cache:rw
