--- a/docker/dockerfile/Dockerfile.sdwebui_ext
+++ b/docker/dockerfile/Dockerfile.sdwebui_ext
@@ -130,6 +130,10 @@ RUN git clone --depth=1 https://github.com/pkuliyi2015/multidiffusion-upscaler-f
 # 安装 sd-webui-inpaint-anything（运用SAM算法来进行局部重绘的SD插件工具）
 RUN git clone --depth=1 https://github.com/Uminosachi/sd-webui-inpaint-anything
 
+# 安装 SD-webui-blip2 帮助你反推每张图片的提示词
+RUN python -m pip install salesforce-lavis
+RUN git clone --depth=1 https://github.com/Tps-F/sd-webui-blip2
+
 # 进行一次安装，以便将插件的依赖安装到容器中
 WORKDIR $NOTEBOOK_DIR/stable-diffusion-webui
 ENV COMMANDLINE_ARGS --skip-torch-cuda-test
