--- a/docker/dockerfile/Dockerfile.comfyui_ext
+++ b/docker/dockerfile/Dockerfile.comfyui_ext
@@ -55,6 +55,10 @@ RUN cd ComfyUI-Impact-Pack && \
 RUN git clone --depth=1 https://github.com/ssitu/ComfyUI_NestedNodeBuilder;
 
 RUN git clone --depth=1 https://github.com/ltdrdata/ComfyUI-Workflow-Component;
+RUN cd ComfyUI-Workflow-Component && \
+    cd components && \
+    git clone --depth=1 https://github.com/lcolok/logic_workflow && \
+    cd /;
 
 RUN git clone --depth=1 https://github.com/Derfuu/Derfuu_ComfyUI_ModdedNodes
 
